# job-hunter

./: .gitignore  CLAUDE.md  LICENSE  README.md  REFINEMENTS.md  docker-compose.yml  package.json
.github/workflows/: pages.yml  release.yml
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  backend.spec  requirements.txt  run.py
backend/app/: main.py
backend/app/core/: config.py  llm.py  paths.py
backend/app/models/: auto_search.py  design.py  ingestion.py  jobs.py  profile.py
backend/app/repositories/: profile_repository.py
backend/app/routers/: application.py  auto_search.py  config.py  design.py  jobs.py  profile.py
backend/app/services/: application.py  auto_search_scheduler.py  auto_search_store.py  cover_letter.py  default_designs.py  design_generator.py  extractors.py  file_processor.py  ingestion.py  job_pipeline.py  job_search.py  job_store.py  match_scoring.py  playwright_renderer.py  prompt_defaults.py  resume_renderer.py  search_cache.py  suggestions.py
backend/tests/: conftest.py
backend/tests/test_models/: test_auto_search.py  test_design.py  test_profile_model.py
backend/tests/test_routers/: test_auto_search.py  test_config.py  test_design.py  (+2 more)
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
landing/: index.html
scripts/: ensure-dev-stub.ps1
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+57 files in other folders)
