[package]
name = "job-hunter"
version = "0.1.0"
description = "Job Hunter Assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "job_hunter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "job-hunter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
